fixing z-index to filter bar be above navbar and behind a modal shadow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,7 @@ svg {
 /* USER HOME-PAGE */
 
 #filter_bar {
-    z-index: 2024;
+    z-index: 1040;
 }
 
 /* PRODUCT DETAILS PAGE */
